<resources>
    <string name="app_name">SuperClickers (aka TBLearn)</string>
    <string name="testButton">This button does something</string>
    <string name="connecting">Connecting....</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="ssoId">SSO ID</string>
    <string name="pwd">Enter password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="go">Go Back</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm Password</string>
    <string name="skip">Skip</string>
    <string name="play">Play</string>
    <string name="quiz_service">Quiz Service</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="start_user_quiz">Start Quiz</string>
    <string name="start_group_quiz">Start Group Quiz</string>
    <string name="check_mark">\u2714</string>
    <string name="x_mark">\u2717</string>
    <string name="finish_group_quiz">Finish Group Quiz</string>
    <string name="user_results">User Results</string>
    <string name="group_results">Group Results</string>
    <string name="view_quizzes">View Quizzes</string>
    <string name="groups">Groups</string>
    <string name="token">Token</string>
    <string name="available_quizzes">Available Quizzes</string>
    <string name="confidence_points">Confidence Points Remaining: </string>
</resources>
